@@ -19,14 +19,13 @@
  */
 package org.xwiki.wiki.internal.provisioning;
 
-import java.util.Arrays;
 import java.util.List;
 
+import javax.inject.Named;
 import javax.inject.Provider;
 
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.InOrder;
 import org.slf4j.Logger;
 import org.xwiki.job.event.status.JobProgressManager;
@@ -35,7 +34,9 @@ import org.xwiki.model.reference.DocumentReferenceResolver;
 import org.xwiki.model.reference.WikiReference;
 import org.xwiki.query.Query;
 import org.xwiki.query.QueryManager;
-import org.xwiki.test.mockito.MockitoComponentMockingRule;
+import org.xwiki.test.junit5.mockito.ComponentTest;
+import org.xwiki.test.junit5.mockito.InjectMockComponents;
+import org.xwiki.test.junit5.mockito.MockComponent;
 
 import com.xpn.xwiki.XWikiContext;
 
@@ -48,49 +49,50 @@ import static org.mockito.Mockito.when;
 /**
  * @version $Id$
  */
-public class DefaultWikiCopierTest
+@ComponentTest
+class DefaultWikiCopierTest
 {
-    @Rule
-    public MockitoComponentMockingRule<DefaultWikiCopier> mocker = new MockitoComponentMockingRule(
-        DefaultWikiCopier.class);
+    @InjectMockComponents
+    private DefaultWikiCopier defaultWikiCopier;
 
+    @MockComponent
     private QueryManager queryManager;
 
+    @MockComponent
     private Provider<XWikiContext> xcontextProvider;
 
+    @MockComponent
+    @Named("current")
     private DocumentReferenceResolver<String> documentReferenceResolver;
 
+    @MockComponent
     private JobProgressManager progress;
 
+    @MockComponent
     private Logger logger;
 
     private XWikiContext xcontext;
 
     private com.xpn.xwiki.XWiki xwiki;
 
-    @Before
-    public void setUp() throws Exception
+    @BeforeEach
+    void setUp()
     {
-        queryManager = mocker.getInstance(QueryManager.class);
-        progress = mocker.getInstance(JobProgressManager.class);
-        xcontextProvider = mocker.registerMockComponent(XWikiContext.TYPE_PROVIDER);
-        xcontext = mock(XWikiContext.class);
-        when(xcontextProvider.get()).thenReturn(xcontext);
-        xwiki = mock(com.xpn.xwiki.XWiki.class);
-        when(xcontext.getWiki()).thenReturn(xwiki);
-
-        documentReferenceResolver = mocker.getInstance(DocumentReferenceResolver.TYPE_STRING, "current");
+        this.xcontext = mock(XWikiContext.class);
+        when(this.xcontextProvider.get()).thenReturn(this.xcontext);
+        this.xwiki = mock(com.xpn.xwiki.XWiki.class);
+        when(this.xcontext.getWiki()).thenReturn(this.xwiki);
     }
 
     @Test
-    public void copyDocuments() throws Exception
+    void copyDocuments() throws Exception
     {
         // Mocks
         Query query = mock(Query.class);
-        when(queryManager.createQuery("select distinct doc.fullName from Document as doc", Query.XWQL)).thenReturn(
-            query);
+        when(this.queryManager.createQuery("select distinct doc.fullName from Document as doc",
+            Query.XWQL)).thenReturn(query);
 
-        List<String> documentList = Arrays.asList("Space.Doc1", "Space.Doc2", "Space.Doc3");
+        List<String> documentList = List.of("Space.Doc1", "Space.Doc2", "Space.Doc3");
         when(query.<String>execute()).thenReturn(documentList);
 
         WikiReference fromWikiReference = new WikiReference("wikiA");
@@ -100,33 +102,33 @@ public class DefaultWikiCopierTest
         DocumentReference copydocRef1 = new DocumentReference("wikiB", "Space", "Doc1");
         DocumentReference copydocRef2 = new DocumentReference("wikiB", "Space", "Doc2");
         DocumentReference copydocRef3 = new DocumentReference("wikiB", "Space", "Doc3");
-        when(documentReferenceResolver.resolve(eq("Space.Doc1"), eq(fromWikiReference))).thenReturn(docRef1);
-        when(documentReferenceResolver.resolve(eq("Space.Doc2"), eq(fromWikiReference))).thenReturn(docRef2);
-        when(documentReferenceResolver.resolve(eq("Space.Doc3"), eq(fromWikiReference))).thenReturn(docRef3);
+        when(this.documentReferenceResolver.resolve(eq("Space.Doc1"), eq(fromWikiReference))).thenReturn(docRef1);
+        when(this.documentReferenceResolver.resolve(eq("Space.Doc2"), eq(fromWikiReference))).thenReturn(docRef2);
+        when(this.documentReferenceResolver.resolve(eq("Space.Doc3"), eq(fromWikiReference))).thenReturn(docRef3);
 
         // Test
-        mocker.getComponentUnderTest().copyDocuments("wikiA", "wikiB", false);
+        this.defaultWikiCopier.copyDocuments("wikiA", "wikiB", false);
 
         // Verify
         verify(query).setWiki("wikiA");
-        InOrder inOrder = inOrder(progress, xwiki, mocker.getMockedLogger());
-        inOrder.verify(progress).pushLevelProgress(3, mocker.getComponentUnderTest());
+        InOrder inOrder = inOrder(this.progress, this.xwiki, this.logger);
+        inOrder.verify(this.progress).pushLevelProgress(3, this.defaultWikiCopier);
 
-        inOrder.verify(progress).startStep(mocker.getComponentUnderTest());
-        inOrder.verify(mocker.getMockedLogger()).info("Copying document [{}] to [{}].", docRef1, copydocRef1);
-        inOrder.verify(xwiki).copyDocument(docRef1, copydocRef1, null, true, true, xcontext);
-        inOrder.verify(mocker.getMockedLogger()).info("Done copying document [{}] to [{}].", docRef1, copydocRef1);
+        inOrder.verify(this.progress).startStep(this.defaultWikiCopier);
+        inOrder.verify(this.logger).info("Copying document [{}] to [{}].", docRef1, copydocRef1);
+        inOrder.verify(this.xwiki).copyDocument(docRef1, copydocRef1, null, true, true, this.xcontext);
+        inOrder.verify(this.logger).info("Done copying document [{}] to [{}].", docRef1, copydocRef1);
 
-        inOrder.verify(progress).startStep(mocker.getComponentUnderTest());
-        inOrder.verify(mocker.getMockedLogger()).info("Copying document [{}] to [{}].", docRef2, copydocRef2);
-        inOrder.verify(xwiki).copyDocument(docRef2, copydocRef2, null, true, true, xcontext);
-        inOrder.verify(mocker.getMockedLogger()).info("Done copying document [{}] to [{}].", docRef2, copydocRef2);
+        inOrder.verify(this.progress).startStep(this.defaultWikiCopier);
+        inOrder.verify(this.logger).info("Copying document [{}] to [{}].", docRef2, copydocRef2);
+        inOrder.verify(this.xwiki).copyDocument(docRef2, copydocRef2, null, true, true, this.xcontext);
+        inOrder.verify(this.logger).info("Done copying document [{}] to [{}].", docRef2, copydocRef2);
 
-        inOrder.verify(progress).startStep(mocker.getComponentUnderTest());
-        inOrder.verify(mocker.getMockedLogger()).info("Copying document [{}] to [{}].", docRef3, copydocRef3);
-        inOrder.verify(xwiki).copyDocument(docRef3, copydocRef3, null, true, true, xcontext);
-        inOrder.verify(mocker.getMockedLogger()).info("Done copying document [{}] to [{}].", docRef3, copydocRef3);
+        inOrder.verify(this.progress).startStep(this.defaultWikiCopier);
+        inOrder.verify(this.logger).info("Copying document [{}] to [{}].", docRef3, copydocRef3);
+        inOrder.verify(this.xwiki).copyDocument(docRef3, copydocRef3, null, true, true, this.xcontext);
+        inOrder.verify(this.logger).info("Done copying document [{}] to [{}].", docRef3, copydocRef3);
 
-        inOrder.verify(progress).popLevelProgress(mocker.getComponentUnderTest());
+        inOrder.verify(this.progress).popLevelProgress(this.defaultWikiCopier);
     }
 }
